# sequifier

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CNAME  LICENSE  README.md  config-parameters.md  index.html  pyproject.toml  pyrightconfig.json
agent/: log.md  task.md
configs/: infer.yaml  preprocess.yaml  train.yaml
design/: sequifier-illustration.excalidraw
dev/: bugs.txt  commands.txt  dev.txt  directions.txt  notes.txt
docs/: requirement-docs.txt  requirements-docs.txt
documentation/: consolidated-docs.md
hooks/: consolidate_docs.py  correct_docs_version.py  validate_docs_deps.py
main/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
predictions/: sequifier-model-real-1-best-3-autoregression-predictions.csv  sequifier-model-real-5-best-3-predictions.csv  sequifier-model-real-50-best-3-predictions.csv
tests/: integration-test-log.txt  test_ingestion_validation.py
tools/: analysis.py  convert_folder.sh  convert_to_pt.py  convert_v0_config_to_v1.py  extract_validation_losses_to_table.py  resize_pt_files.py  split_file.py  stream_folder_via_scp.py
v0.7.1.5/: api.html  genindex.html  index.html  py-modindex.html  search.html
v0.8.0.0/: api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.8.0.1/: api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.8.0.10/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.8.0.2/: api.html  genindex.html  index.html  objects.inv  search.html  (+1 more)
(+1646 files in other folders)
