[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sequifier"
version = "0.6.2.1"
authors = [
    { name = "Leon Luithlen", email = "leontimnaluithlen@gmail.com" },
]
description = "Train a transformer model with the command line"
readme = "README.md"
license = { text = "BSD 3-Clause" }
keywords = ["transformer", "sequence classification", "machine learning", "sequence", "sequence modelling", "nlp", "language", "language modelling", "torch", "pytorch"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.23,<2.0",
    "torch>=2.0,<3.0",
    "torch_optimizer>=0.3.0,<0.4.0",
    "onnx>=1.15.0,<2.0.0",
    "onnxruntime>=1.17,<2.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=1.0,<2.0",
    "pyarrow>=15.0,<16.0",
    "fastparquet>=2024.2.0,<2025.0.0",
    "beartype>=0.18.5,<0.19.0",
]

[project.urls]
Homepage = "https://github.com/0xideas/sequifier"
Repository = "https://github.com/0xideas/sequifier"

[project.scripts]
sequifier = "sequifier.sequifier:main"

[project.optional-dependencies]
test = [
    "pytest>=7.2,<8.0",
    "csvkit>=1.0,<2.0",
]
